# Transappru

./: .env.example  .env.production.example  .gitignore  .mcp.json  .watchmanconfig  ANDROID_DEVICE_SETUP.md  ARCHITECTURE.md  CLAUDE.md  FIREBASE_SETUP.md  GIT_SETUP_COLLABORATION.md  GoogleService-Info.plist.example  QUICK_START.md  README.md  START_HERE.md  TODO.md  app.json  babel.config.js  babel.jest.config.js  bundle-release.sh  eas.json  eslint.config.js  firebase.json  jest-msw.setup.ts  jest-rn-stub.ts  jest-setup.ts  jest.config.js  metro.config.js  new.sh  package-lock.json  package.json  skills-lock.json  tailwind.config.js  test-push.js  tsconfig.json
.claude/: rules.md  settings.json  tasks.md
.githooks/: pre-push
Writerside/: ta.tree  writerside.cfg
android/: build.gradle  gradle.properties  settings.gradle
app/: +html.tsx  _layout.tsx  deleted.tsx  index.tsx  invite-user.tsx  onboarding.tsx  pin.tsx  user.tsx  user.web.tsx
components/: CustomSplashScreen.tsx
docs/: ANDROID_STUDIO_CRASH_FIX.md  ANDROID_STUDIO_MODULE_FIX.md  CLEANUP_DONE.md  CLEAR_APP_DATA_IOS.md  CURRENT_STATE.md  DONE.md  DSYM_INFO.md  EXPO_ROUTER_GUIDE.md  EXPO_ROUTER_MIGRATION_COMPLETE.md  FINE_PAYMENT_INTEGRATION.md  (+33 more)
payment-service/: CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  aerich.ini  docker-compose.yml  pyproject.toml  ruff.toml
payment-service/app/: main.py  models.py
payment-service/app/bot/: bot_worker.py  handlers.py  notify.py  poll_alerts.py
payment-service/app/config/: db.py  settings.py
payment-service/app/controllers/: data_issues.py  health.py  payment.py
payment-service/app/schemas/: data_issues.py
payment-service/app/services/: commission.py  data_issues.py  firebase_push.py  kazna.py  system_notice.py
payment-service/docker/: start.sh
payment-service/migrations/: 001_add_transaction_items.sql  002_data_issues_and_notice.sql
payment-service/tests/: conftest.py  test_data_issues_endpoint.py  test_db_init.py  test_firebase_push.py  test_health_endpoint.py  test_notify_endpoint.py  test_notify_format.py  test_poll_alerts.py  test_system_notice_endpoint.py  test_system_notice_service.py
(+426 files in other folders)
