[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transapp-payment-service"
version = "0.1.0"
description = "Payment microservice for TransApp (Kazna API integration)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "TransApp Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Web framework
    "litestar[standard]>=2.0.0",

    # Database
    "tortoise-orm[asyncpg]>=0.20.0",
    "asyncpg>=0.29.0",
    "aerich>=0.7.2",

    # Validation and serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Logging
    "python-json-logger>=3.3.0",

    # Utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0", # Для запросов к Kazna API
    "cryptography>=41.0.0", # Для подписи запросов

    # Telegram bot — admin alerts + manual banner control (ADR-011)
    "aiogram>=3.4,<4.0",

    # Firebase Admin SDK — server-side FCM for recovery push (ADR-011)
    "firebase-admin>=6.4,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",  # Tortoise needs aiosqlite to use sqlite:// in tests
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
# Quiet down deprecation noise from third-party libs in test output.
filterwarnings = [
    "ignore::DeprecationWarning:tortoise.*",
    "ignore::DeprecationWarning:pydantic.*",
]

[project.scripts]
app = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.aerich]
tortoise_orm = "app.config.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
